leitura .pat eftx_app

--- a/templates/calcular_cobertura.html
+++ b/templates/calcular_cobertura.html
@@ -302,7 +302,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.6/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA4jwMwkN9aIuRvxV498PsmV_dJnpWQ1TY&callback=initMap" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key={{ maps_api_key }}&libraries=visualization,geometry&callback=initMap" async defer></script>
     <script>
         let map;
         let marker;
