--- a/templates/mapa.html
+++ b/templates/mapa.html
@@ -329,7 +329,8 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
 <script src="https://code.highcharts.com/highcharts.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA4jwMwkN9aIuRvxV498PsmV_dJnpWQ1TY&libraries=visualization,geometry&callback=initMap" async defer></script>
+<script src="https://maps.googleapis.com/maps/api/js?key={{ maps_api_key }}&libraries=visualization,geometry&callback=initMap" async defer></script>
+
     
 
 
