--- a/templates/calcular_cobertura.html
+++ b/templates/calcular_cobertura.html
@@ -110,6 +110,10 @@
                     <label for="rxGain" class="form-label">Ganho do receptor (dB)</label>
                     <input type="number" id="rxGain" name="rxGain" class="form-control" min="0" step="any" required>
                 </div>
+                <div>
+                    <label for="antennaTilt" class="form-label">Tilt elétrico TX (°)</label>
+                    <input type="number" id="antennaTilt" name="antennaTilt" class="form-control" step="0.5" placeholder="0">
+                </div>
             </div>
         </article>
 
