--- a/templates/mapa.html
+++ b/templates/mapa.html
@@ -147,5 +147,5 @@
 
 {% block extra_scripts %}
     <script src="{{ url_for('static', filename='js/pages/mapa.js') }}"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key={{ current_app.config['GOOGLE_MAPS_API_KEY'] }}&libraries=geometry&callback=initCoverageMap" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key={{ maps_api_key }}&libraries=geometry&callback=initCoverageMap" async defer></script>
 {% endblock %}
