ajustes funcionais antes de implementar interferencia

--- a/templates/calcular_cobertura.html
+++ b/templates/calcular_cobertura.html
@@ -139,6 +139,10 @@
                     <label for="antennaTilt" class="form-label">Tilt elétrico TX (°)</label>
                     <input type="number" id="antennaTilt" name="antennaTilt" class="form-control" step="0.5" placeholder="0">
                 </div>
+                <div>
+                    <label for="antennaDirection" class="form-label">Azimute da antena (°)</label>
+                    <input type="number" id="antennaDirection" name="antennaDirection" class="form-control" min="0" max="359" step="1" placeholder="0">
+                </div>
             </div>
         </article>
 
