--- a/templates/mapa.html
+++ b/templates/mapa.html
@@ -34,6 +34,10 @@
                     <dd id="txModel">-</dd>
                 </div>
                 <div>
+                    <dt>Azimute</dt>
+                    <dd id="txDirection">-</dd>
+                </div>
+                <div>
                     <dt>Município</dt>
                     <dd id="txMunicipio">-</dd>
                 </div>
@@ -84,13 +88,18 @@
         </div>
 
         <div class="panel-card">
-            <h3 class="card-title">Ajuste de Tilt</h3>
+            <h3 class="card-title">Ajustes de Antena</h3>
             <label class="form-label" for="tiltControl">Tilt elétrico TX (°)</label>
             <div class="input-group">
                 <input type="range" id="tiltControl" min="-10" max="30" step="0.5" value="0">
                 <span class="input-value" id="tiltValue">0°</span>
             </div>
-            <p class="assist-text">O ganho vertical é recalculado em E/Emax (θ = 0°) para o perfil de cobertura.</p>
+            <label class="form-label" for="directionControl">Azimute da antena (°)</label>
+            <div class="input-group">
+                <input type="range" id="directionControl" min="0" max="359" step="1" value="0">
+                <span class="input-value" id="directionValue">0°</span>
+            </div>
+            <p class="assist-text">O ganho vertical é recalculado em E/Emax (θ = 0°) e o diagrama horizontal é alinhado ao azimute informado.</p>
         </div>
 
         <div class="panel-card">
